--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "agora_rtc_token_server",
   "version": "1.0.0",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "agora-access-token": "^2.0.4"
+    "agora-access-token": "^2.0.4",
+    "dotenv": "^16.3.1"
   }
 }
